# json-sender

./: Cargo.toml  LICENSE.txt  README.md
src/: args.rs  file.rs  files.rs  http.rs  lib.rs  main.rs  parser.rs  settings.rs  setup.rs
src/http/: delete.rs  get.rs  mod.rs  post.rs  put.rs
tests/: integration_http.rs  integration_settings.rs
tests/common/: mod.rs
