[package]
name = "json-sender"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rayon = "1.5"
config = "0.13.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.57"
clap = { version = "4.0.12", features = ["derive"] }
